# sloth

./: .gitignore  Makefile  mypy.ini  pyproject.toml  ruff.toml
sloth/: ast.py  evaluation.py  lexer.py  objects.py  parser.py  repl.py  token.py
src/: lexer.py  token.py
test/: helpers.py  test_lexer.py
tests/: helpers.py  test_evaluation.py  test_lexer.py  test_parser.py  test_token.py
