[tool.poetry]
name = "sloth"
version = "0.0.1"
description = "Toy programming language"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
mypy = "^1.10.1"
flake8 = "^7.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
